--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <ul class="loader">
+        <li class="li"></li>
+        <li class="li"></li>
+        <li class="li"></li>
+        <li class="li"></li>
+        <li class="li"></li>
+    </ul>
+
     <section class="game">
         <div class="container">
             <div class="game__wrapper">
@@ -135,6 +143,6 @@
     </section>
     <!-- /.game -->
 
-    <!-- <script src="js/index.js"></script> -->
+    <script src="js/index.js"></script>
 </body>
 </html>
