--- a/src/index.html
+++ b/src/index.html
@@ -143,6 +143,26 @@
     </section>
     <!-- /.game -->
 
+    <section class="preplay">
+        <div class="preplay__main">
+            <button type="submit" class="preplay__start">Начать игру</button>
+            <div class="preplay__list">
+                <div class="preplay__input">
+                    <input type="text" class="preplay-input" name="name" autocomplete="off">
+                    <label>Введите имя</label>
+                </div>
+
+                <div class="preplay__new-user"></div>
+                <h3 class="preplay__title-list">Победители</h3>
+                <div class="preplay__about_winner">
+                    <div class="user-name"></div>
+                    <div class="user-score"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /.preplay -->
+
     <script src="js/index.js"></script>
 </body>
 </html>
