start doing logic

--- a/src/index.html
+++ b/src/index.html
@@ -63,16 +63,7 @@
                         </div>
                     </header>
     
-                    <div class="game__question">
-                        Что крутят участники телепрограммы "Поле чудес"?
-                    </div>
-    
-                    <div class="game__answers">
-                        <button class="game__answer">В лесу</button>
-                        <button class="game__answer">В лесу</button>
-                        <button class="game__answer">В лесу</button>
-                        <button class="game__answer">В лесу</button>
-                    </div>
+                    <div class="game__questions_wrapper"></div>
                 </div>
                 <div class="game__prize">
                     <ol class="game__levels">
@@ -148,7 +139,7 @@
             <button type="submit" class="preplay__start">Начать игру</button>
             <div class="preplay__list">
                 <div class="preplay__input">
-                    <input type="text" class="preplay-input" name="name" autocomplete="off">
+                    <input type="text" class="preplay-input" name="name" autocomplete="off" required>
                     <label>Введите имя</label>
                 </div>
 
