hard logic is done

--- a/src/index.html
+++ b/src/index.html
@@ -154,6 +154,18 @@
     </section>
     <!-- /.preplay -->
 
+    <section class="game-over">
+        <div class="game-over__box">
+            <div class="game-over__img"><img src="./icons/friend.svg" alt=""></div>
+            <!-- <h3 class="game-over__win"></h3>
+            <h3 class="game-over__sum"></h3>
+            <p class="game-over__tryAgain">
+                Вы были очень близко к главному призу. Попробуйте еще раз...
+            </p> -->
+        </div>
+    </section>
+    <!-- /.game-over -->
+
     <script src="js/index.js"></script>
 </body>
 </html>
