made showing correct and incorrect

--- a/src/index.html
+++ b/src/index.html
@@ -162,6 +162,8 @@
             <p class="game-over__tryAgain">
                 Вы были очень близко к главному призу. Попробуйте еще раз...
             </p> -->
+
+            <button class="game-over__btn" type="submit">Хорошо</button>
         </div>
     </section>
     <!-- /.game-over -->
