timer and fixed fichers))

--- a/src/index.html
+++ b/src/index.html
@@ -67,63 +67,63 @@
                 </div>
                 <div class="game__prize">
                     <ol class="game__levels">
-                        <li class="game__level">
+                        <li class="game__level" data-level="100">
                             <p>01.</p>
                             <p>100</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="200">
                             <p>02.</p>
                             <p>200</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="300">
                             <p>03.</p>
                             <p>300</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="500">
                             <p>04.</p>
                             <p>500</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="1000">
                             <p>05.</p>
                             <p>1000</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="2000">
                             <p>06.</p>
                             <p>2000</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="4000">
                             <p>07.</p>
                             <p>4000</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="8000">
                             <p>08.</p>
                             <p>8000</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="16000">
                             <p>09.</p>
                             <p>16000</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="32000">
                             <p>10.</p>
                             <p>32000</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="64000">
                             <p>11.</p>
                             <p>64000</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="125000">
                             <p>12.</p>
                             <p>125000</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="250000">
                             <p>13.</p>
                             <p>250000</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="500000">
                             <p>14.</p>
                             <p>500000</p>
                         </li>
-                        <li class="game__level">
+                        <li class="game__level" data-level="1000000">
                             <p>15.</p>
                             <p>1000000</p>
                         </li>
@@ -157,11 +157,9 @@
     <section class="game-over">
         <div class="game-over__box">
             <div class="game-over__img"><img src="./icons/friend.svg" alt=""></div>
-            <!-- <h3 class="game-over__win"></h3>
+            <h3 class="game-over__prize"></h3>
             <h3 class="game-over__sum"></h3>
-            <p class="game-over__tryAgain">
-                Вы были очень близко к главному призу. Попробуйте еще раз...
-            </p> -->
+            <p class="game-over__finalMes"></p>
 
             <button class="game-over__btn" type="submit">Хорошо</button>
         </div>
