list of winners

--- a/src/index.html
+++ b/src/index.html
@@ -145,9 +145,8 @@
 
                 <div class="preplay__new-user"></div>
                 <h3 class="preplay__title-list">Победители</h3>
-                <div class="preplay__about_winner">
-                    <div class="user-name"></div>
-                    <div class="user-score"></div>
+                <div class="preplay__winners_list">
+                   
                 </div>
             </div>
         </div>
