--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                     <header class="header">
                         <div class="header__help">
                             <div class="header__call">
-                                <button class="header__btn"><img src="icons/friend.svg" alt=""></button>
+                                <button class="header__btn"><img src="icons/one.svg" alt=""></button>
                                 <div class="hint_help">
                                     <h4>Звонок другу</h4>
                                     <p>
@@ -34,7 +34,7 @@
                             </div>
                             
                             <div class="header__fifty">
-                                <button class="header__btn"><img src="icons/friend.svg" alt=""></button>
+                                <button class="header__btn"><img src="icons/white.svg" alt=""></button>
                                 <div class="hint_help">
                                     <h4>Звонок другу</h4>
                                     <p>
@@ -143,7 +143,6 @@
                     <label>Введите имя</label>
                 </div>
 
-                <div class="preplay__new-user"></div>
                 <h3 class="preplay__title-list">Победители</h3>
                 <div class="preplay__winners_list">
                    
