--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                             <div class="header__call">
                                 <button class="header__btn"><img src="icons/one.svg" alt=""></button>
                                 <div class="hint_help">
-                                    <h4>Звонок другу</h4>
+                                    <h4>"Звонок другу"</h4>
                                     <p>
                                         Вы можете<br>
                                         посоветоваться с<br> 
@@ -34,25 +34,23 @@
                             </div>
                             
                             <div class="header__fifty">
-                                <button class="header__btn"><img src="icons/white.svg" alt=""></button>
+                                <button class="header__btn"><img src="icons/cube.svg" alt=""></button>
                                 <div class="hint_help">
-                                    <h4>Звонок другу</h4>
+                                    <h4>"Два ответа"</h4>
                                     <p>
-                                        Вы можете<br>
-                                        посоветоваться с<br> 
-                                        другом по телефону
+                                        Вы можете выбрать<br>
+                                        два ответа из<br> возможных
                                     </p>
                                 </div>
                             </div>
 
                             <div class="header__cross">
-                                <button class="header__btn"><img src="icons/friend.svg" alt=""></button>
+                                <button class="header__btn"><img src="icons/X.svg" alt=""></button>
                                 <div class="hint_help">
-                                    <h4>Звонок другу</h4>
+                                    <h4>"Минус 2 варианта"</h4>
                                     <p>
-                                        Вы можете<br>
-                                        посоветоваться с<br> 
-                                        другом по телефону
+                                        Останется только<br>
+                                        два варианта на выбор
                                     </p>
                                 </div>
                             </div>
@@ -154,7 +152,7 @@
 
     <section class="game-over">
         <div class="game-over__box">
-            <div class="game-over__img"><img src="./icons/friend.svg" alt=""></div>
+            <div class="game-over__img"><img src="./icons/court.svg" alt=""></div>
             <h3 class="game-over__prize"></h3>
             <h3 class="game-over__sum"></h3>
             <p class="game-over__finalMes"></p>
